# eduwork-databridge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  PROJECT_CHARTER.md  README.md  ROADMAP.md  SCOPE.md  SECURITY.md  alembic.ini  compose.yml  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/reviewer-ui/: index.html  package-lock.json  package.json  vite.config.ts
benchmark-baseline/: budgets.json  small-v0.14.0.json
benchmark-results/: current-v0.14.0.json  current-v0.15.0.json
configs/demo/: seed_metadata.json
docs/: EduWork_DataBridge_Explanation_ELI5.md  EduWork_DataBridge_Field_Guide.md  PROJECT_OVERVIEW.md  PROJECT_STORY.md  faq.md  index.md  troubleshooting.md
docs/architecture/: canonical-model.mmd  context.mmd  phase0-2-sequence.mmd  phase12-operations.mmd  phase4-ingestion.mmd  phase8-processing.mmd
docs/assets/: walkthrough.ass
docs/concepts/: architecture.md  core-model.md
docs/deployment/: local.md
docs/developer/: getting-started.md  implementation-path.md
docs/evaluator/: 30-minute-tour.md  demo-walkthrough.md
docs/evidence/: acceptance-matrix.md  claims-register.md  evidence-log.md  phase-0-2-completion.md  phase-3-4-completion.md  phase-5-8-completion.md  phase-9-12-completion.md  (+1 more)
migrations/: env.py
release/: SHA256SUMS  backup-restore-verification.json  benchmark-verification.json  environment-gaps.json  release-verification.json
schemas/: deterministic-match-config.schema.json  export-config.schema.json  mapping-config.schema.json  mart-definition-config.schema.json  orchestration-config.schema.json  pipeline-config.schema.json  probabilistic-match-config.schema.json  profile-config.schema.json  retention-policy-config.schema.json  source-config.schema.json  validation-config.schema.json
scripts/: export_json_schemas.py  generate_data_dictionary.py  generate_release_checksums.py  generate_synthetic_data.py  run_benchmark.py  run_phase8_demo.py  scan_secrets.py  verify_backup_restore.py  verify_benchmark.py  verify_packages.py  verify_release.py  verify_synthetic_data.py  verify_wheel_install.py
tests/: conftest.py  factories.py
(+122 files in other folders)
