[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduwork-databridge"
version = "0.15.0"
description = "Industry-neutral learning and workforce data interoperability foundation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
authors = [{name = "Nafiz Imtiaz"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "alembic>=1.16,<2",
  "dagster>=1.11,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openlineage-python>=1.34,<2",
  "openpyxl>=3.1,<4",
  "opentelemetry-sdk>=1.34,<2",
  "polars>=1.31,<2",
  "pyarrow>=23.0.1,<24",
  "rapidfuzz>=3.13,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0.41,<3",
  "structlog>=25,<26",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
data = [
  "duckdb>=1.3,<2",
  "pandera[polars]>=0.24,<1",
  "tenacity>=9,<10",
]
matching = ["splink>=4.0,<5"]
dev = [
  "build>=1.2,<2",
  "hypothesis>=6.135,<7",
  "jsonschema>=4.24,<5",
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
  "mypy>=1.16,<2",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
  "types-openpyxl>=3.1,<4",
  "types-PyYAML>=6.0,<7",
]

[tool.setuptools.packages.find]
where = ["packages/eduwork_databridge"]
include = ["eduwork_databridge*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["eduwork_databridge"]
mypy_path = "packages/eduwork_databridge"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=eduwork_databridge --cov-report=term-missing"
testpaths = ["tests"]
markers = ["integration: integration tests"]

[tool.coverage.run]
branch = true
source = ["eduwork_databridge"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
